Problem od different infoboxes

--- a/jupyter/cities_get_info.ipynb
+++ b/jupyter/cities_get_info.ipynb
@@ -2,24 +2,38 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Empty DataFrame\n",
-      "Columns: [Państwo, Województwo, Powiat, Aglomeracja, Data Założena, Prawa miejskie, Burmistrz, Pole powierzchni, Wysokość, Liczba ludności i Gęstość, Strefa numeracyjna, Kod pocztowy, Tablice rejestracyjne]\n",
-      "Index: []\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\wooch\\AppData\\Local\\Temp\\ipykernel_11284\\3399082491.py:36: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
-      "  CitiesData.append( rowDataSeries, ignore_index=True)\n"
+      "Len:  14\n",
+      "                 Miasto Tablice rejestracyjne\n",
+      "0  Aleksandrów Kujawski                   CAL\n",
+      "Len:  14\n",
+      "                 Miasto Tablice rejestracyjne\n",
+      "0  Aleksandrów Kujawski                   CAL\n",
+      "1    Aleksandrów Łódzki                   EZG\n",
+      "Len:  14\n",
+      "                 Miasto Tablice rejestracyjne\n",
+      "0  Aleksandrów Kujawski                   CAL\n",
+      "1    Aleksandrów Łódzki                   EZG\n",
+      "2              Alwernia                32-566\n",
+      "Len:  14\n",
+      "                 Miasto Tablice rejestracyjne\n",
+      "0  Aleksandrów Kujawski                   CAL\n",
+      "1    Aleksandrów Łódzki                   EZG\n",
+      "2              Alwernia                32-566\n",
+      "3             Andrychów                   KWA\n",
+      "Len:  14\n",
+      "                 Miasto                    Tablice rejestracyjne\n",
+      "0  Aleksandrów Kujawski                                      CAL\n",
+      "1    Aleksandrów Łódzki                                      EZG\n",
+      "2              Alwernia                                   32-566\n",
+      "3             Andrychów                                      KWA\n",
+      "4               Annopol  Położenie na mapie gminy AnnopolAnnopol\n"
      ]
     }
    ],
@@ -35,34 +49,35 @@
     "listOfCitiesLinks = []\n",
     "\n",
     "for a, b in df.iterrows():\n",
-    "    listOfCitiesLinks.append(b[2])\n",
+    "    listOfCitiesLinks.append([b[1],b[2]])\n",
     "del df\n",
     "\n",
-    "for city in listOfCitiesLinks[:1]:\n",
-    "    \n",
-    "    dfs = requests.get( city )\n",
-    "    soup = bs( dfs.text ,'html.parser' )\n",
-    "    \n",
-    "    \n",
-    "    columnNames = [\"Państwo\",\"Województwo\", \"Powiat\", \"Aglomeracja\", \n",
+    "columnNames = [\"Miasto\",\"Państwo\",\"Województwo\", \"Powiat\", \"Aglomeracja\", \n",
     "                   \"Data Założena\", \"Prawa miejskie\", \"Burmistrz\", \"Pole powierzchni\",\n",
     "                   \"Wysokość\", \"Liczba ludności i Gęstość\",\"Strefa numeracyjna\", \"Kod pocztowy\", \"Tablice rejestracyjne\"\n",
     "                    ]\n",
-    "    CitiesData = pd.DataFrame( columns=columnNames )\n",
-    "    infobox = soup.find( 'table', {'class':'infobox'})\n",
+    "CitiesData = pd.DataFrame( columns=columnNames )\n",
+    "\n",
+    "for city, cityLink in listOfCitiesLinks[:5]:\n",
     "    \n",
+    "    dfs = requests.get( cityLink )\n",
+    "    soup = bs( dfs.text ,'html.parser' )\n",
+    "        \n",
+    "    infobox = soup.find( 'table', {'class':'infobox'})\n",
     "    infobox_body = infobox.find('tbody')\n",
     "    rows = infobox_body.find_all( 'tr')\n",
-    "    rowData = []\n",
+    "    inboxRowData = []\n",
+    "    \n",
     "    for row in rows:\n",
     "        cols = row.find_all('td')\n",
     "        cols = [ele.text.strip() for ele in cols]\n",
-    "        rowData.append(cols)\n",
-    "    rowDataSeries = pd.Series( rowData[6:-13], index=columnNames)\n",
-    "    CitiesData.append( rowDataSeries, ignore_index=True)\n",
+    "        inboxRowData.append(cols[0])\n",
     "    \n",
-    "    print( CitiesData )                     \n",
-    "     \n"
+    "    rowData = [city]+inboxRowData[6:19]\n",
+    "    print(\"Len: \",len(rowData))\n",
+    "    CitiesData.loc[len(CitiesData)]=rowData\n",
+    "    #CitiesData.append(pd.DataFrame(rowData, columns=columnNames), ignore_index=True)\n",
+    "    print(CitiesData[[\"Miasto\",\"Tablice rejestracyjne\"]])"
    ]
   }
  ],
