--- a/jupyter/cities_get_info.ipynb
+++ b/jupyter/cities_get_info.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -10,30 +10,30 @@
      "output_type": "stream",
      "text": [
       "Len:  14\n",
-      "                 Miasto Tablice rejestracyjne\n",
-      "0  Aleksandrów Kujawski                   CAL\n",
+      "                 Miasto         Burmistrz\n",
+      "0  Aleksandrów Kujawski  Arkadiusz Gralak\n",
       "Len:  14\n",
-      "                 Miasto Tablice rejestracyjne\n",
-      "0  Aleksandrów Kujawski                   CAL\n",
-      "1    Aleksandrów Łódzki                   EZG\n",
+      "                 Miasto         Burmistrz\n",
+      "0  Aleksandrów Kujawski  Arkadiusz Gralak\n",
+      "1    Aleksandrów Łódzki    Jacek Lipiński\n",
       "Len:  14\n",
-      "                 Miasto Tablice rejestracyjne\n",
-      "0  Aleksandrów Kujawski                   CAL\n",
-      "1    Aleksandrów Łódzki                   EZG\n",
-      "2              Alwernia                32-566\n",
+      "                 Miasto                              Burmistrz\n",
+      "0  Aleksandrów Kujawski                       Arkadiusz Gralak\n",
+      "1    Aleksandrów Łódzki                         Jacek Lipiński\n",
+      "2              Alwernia  1778–1784, 1808–1868, 1879–1896, 1993\n",
       "Len:  14\n",
-      "                 Miasto Tablice rejestracyjne\n",
-      "0  Aleksandrów Kujawski                   CAL\n",
-      "1    Aleksandrów Łódzki                   EZG\n",
-      "2              Alwernia                32-566\n",
-      "3             Andrychów                   KWA\n",
+      "                 Miasto                              Burmistrz\n",
+      "0  Aleksandrów Kujawski                       Arkadiusz Gralak\n",
+      "1    Aleksandrów Łódzki                         Jacek Lipiński\n",
+      "2              Alwernia  1778–1784, 1808–1868, 1879–1896, 1993\n",
+      "3             Andrychów                             Tomasz Żak\n",
       "Len:  14\n",
-      "                 Miasto                    Tablice rejestracyjne\n",
-      "0  Aleksandrów Kujawski                                      CAL\n",
-      "1    Aleksandrów Łódzki                                      EZG\n",
-      "2              Alwernia                                   32-566\n",
-      "3             Andrychów                                      KWA\n",
-      "4               Annopol  Położenie na mapie gminy AnnopolAnnopol\n"
+      "                 Miasto                              Burmistrz\n",
+      "0  Aleksandrów Kujawski                       Arkadiusz Gralak\n",
+      "1    Aleksandrów Łódzki                         Jacek Lipiński\n",
+      "2              Alwernia  1778–1784, 1808–1868, 1879–1896, 1993\n",
+      "3             Andrychów                             Tomasz Żak\n",
+      "4               Annopol                         Mirosław Gazda\n"
      ]
     }
    ],
@@ -77,7 +77,7 @@
     "    print(\"Len: \",len(rowData))\n",
     "    CitiesData.loc[len(CitiesData)]=rowData\n",
     "    #CitiesData.append(pd.DataFrame(rowData, columns=columnNames), ignore_index=True)\n",
-    "    print(CitiesData[[\"Miasto\",\"Tablice rejestracyjne\"]])"
+    "    print(CitiesData[[\"Miasto\", \"Burmistrz\"]])"
    ]
   }
  ],
